# axum-tutorial

./: Cargo.toml
examples/: quick_dev.rs
src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
